Fix list getting too long

--- a/src/app/user-and-group-management/searchable-list/searchable-list.component.css
+++ b/src/app/user-and-group-management/searchable-list/searchable-list.component.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   width: 95%;
   /*max-height: 440px;*/
-  /*max-height: 620px;*/
+  max-height: 700px;
   /*height: 570px;*/
   padding-bottom: 1%;
   /*border-bottom: 1px solid lightgrey;*/
